# speech2code

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/inputs/: audio.cpp  audio.h
utils/: hf2onnx.sh  hf2onxx.py  test_wisper_onnx.py
